Add: Intent Database tab with 120+ searchable intents
- Added comprehensive intent database (JSON) from FRP research repos
- New Database tab with search, category, manufacturer, and status filters
- Table view with clickable intent links and QR code generation
- Device-specific status tracking (SM-S721B blocked status marked)
- Pagination for large result sets (50 per batch)
- Mobile-responsive table layout
- Downloaded reference repos to research/digest folder
- Updated .gitignore to track research database files

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,14 @@
-# Research and development files
-research/
+# Research - ignore large binary tools but track important files
+research/SamFwTool/
+research/usb_driver/
+research/usb_driver.zip
 tools/
 notes/
+
+# Track these research files
+!research/intent-database.json
+!research/digest/
+!research/research.md
 
 # System files
 .DS_Store
